#423: Fix URL fields having too much spacing around text box.

--- a/sites/all/themes/herne_hill/css/styles.css
+++ b/sites/all/themes/herne_hill/css/styles.css
@@ -3119,78 +3119,82 @@ form .imagefield-focus.focus-box {
   margin: 1.5em 0;
 }
 /* line 217, ../sass/components/_forms.sass */
+.form-item .link-field-url .form-item {
+  margin: 0;
+}
+/* line 220, ../sass/components/_forms.sass */
 .form-checkboxes .form-item, .form-radios .form-item {
   margin: 0;
 }
-/* line 224, ../sass/components/_forms.sass */
+/* line 228, ../sass/components/_forms.sass */
 tr.odd .form-item, tr.even .form-item {
   margin: 0;
 }
-/* line 229, ../sass/components/_forms.sass */
+/* line 233, ../sass/components/_forms.sass */
 .form-item input.error,
 .form-item textarea.error,
 .form-item select.error {
   border: 1px solid red;
 }
-/* line 235, ../sass/components/_forms.sass */
+/* line 239, ../sass/components/_forms.sass */
 .form-item .description {
   font-size: 0.875em;
 }
 
-/* line 240, ../sass/components/_forms.sass */
+/* line 244, ../sass/components/_forms.sass */
 .form-type-radio .description,
 .form-type-checkbox .description {
   margin-left: 2.5em;
 }
 
-/* line 244, ../sass/components/_forms.sass */
+/* line 248, ../sass/components/_forms.sass */
 .form-required {
   color: #8c4965;
 }
 
-/* line 248, ../sass/components/_forms.sass */
+/* line 252, ../sass/components/_forms.sass */
 label.option {
   display: inline;
   font-weight: normal;
 }
 
-/* line 253, ../sass/components/_forms.sass */
+/* line 257, ../sass/components/_forms.sass */
 a.button {
   -webkit-appearance: button;
   -moz-appearance: button;
   appearance: button;
 }
 
-/* line 258, ../sass/components/_forms.sass */
+/* line 262, ../sass/components/_forms.sass */
 .password-parent,
 .confirm-parent {
   margin: 0;
 }
 
-/* line 263, ../sass/components/_forms.sass */
+/* line 267, ../sass/components/_forms.sass */
 #user-login-form {
   text-align: left;
 }
 
-/* line 267, ../sass/components/_forms.sass */
+/* line 271, ../sass/components/_forms.sass */
 #node-edit .form-item-path-alias {
   margin: 1em 0;
 }
-/* line 269, ../sass/components/_forms.sass */
+/* line 273, ../sass/components/_forms.sass */
 #node-edit .form-item-path-alias input {
   width: 50%;
 }
 
-/* line 284, ../sass/components/_forms.sass */
+/* line 288, ../sass/components/_forms.sass */
 #search-form {
   float: right;
 }
-/* line 286, ../sass/components/_forms.sass */
+/* line 290, ../sass/components/_forms.sass */
 #search-form .form-type-textfield {
   vertical-align: top;
   color: #4d3d44;
 }
-/* line 289, ../sass/components/_forms.sass */
+/* line 293, ../sass/components/_forms.sass */
 #search-form .form-type-textfield #edit-keys {
   vertical-align: top;
   height: 35.2px;
@@ -3205,7 +3209,7 @@ a.button {
   box-shadow: inset 0 0 5px #b19fa7;
   font-size: 20px;
 }
-/* line 301, ../sass/components/_forms.sass */
+/* line 305, ../sass/components/_forms.sass */
 #search-form .form-submit {
   vertical-align: top;
   height: 32px;
@@ -3219,7 +3223,7 @@ a.button {
   border: 1px solid #144c3f;
   border-radius: 0.2em;
 }
-/* line 313, ../sass/components/_forms.sass */
+/* line 317, ../sass/components/_forms.sass */
 #search-form .form-submit:hover {
   -moz-box-shadow: inset 0 0 10px #144c3f;
   -webkit-box-shadow: inset 0 0 10px #144c3f;
