--- a/sites/all/themes/herne_hill/sass/components/_forms.sass
+++ b/sites/all/themes/herne_hill/sass/components/_forms.sass
@@ -213,9 +213,13 @@ form
 .form-item
   margin: rhythm(1) 0
 
+  .link-field-url
+    .form-item
+      margin: 0
   // Pack groups of checkboxes and radio buttons closer together
   .form-checkboxes &,
-  .form-radios &
+  .form-radios &,
+
 
     // Drupal core uses "0.4em 0".
     margin: 0
